--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,32 @@
 *{
-  background-color: white;
+    background-color: black;
+    color: white;  
+    text-align: center;
 }
 
-body{
-  background-color: black;
-  color: white;
-  width: 70%;
+img{
+    height: 20em;
+}
+footer{
+    margin: 1em;
+}
+.imageGrid{
+    margin-left: 10%;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 40% 40%;
+}
+.platformGrid{
+    margin-left: 10%;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 40% 40%;
+    grid-template-rows: 40% 40%;
 }
 
+a:link{
+    text-decoration: none;
+}
+a:visited{
+    text-decoration: currentColor;
+}
