--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,31 @@
-*{
-    background-color: black;
-    color: white;  
-    text-align: center;
+* { 
+    color: white;
 }
 
+html{
+    background-image: url(./media/black-wall-brick-wall-background-tile.jpg);
+    background-repeat: repeat;
+}
+
+h1, h2, nav{ 
+    text-align: center;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.item{
+    background-image: url(/media/potion.svg);
+    height: 10em;
+    width: 10em;
+}
+/* Background a and b styles*/
 img{
     height: 20em;
 }
+
 footer{
     margin: 1em;
 }
