--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@ nav{
     justify-content: space-evenly;
     background-image: url(./media/fullPlantPlat.svg);
     background-repeat: repeat-x;
-    height: 2.4em;
-    padding-top: 2.15em;
-    margin-top: -1.5em;
+    height: 1.5em;
+    padding-top: .7em;
+    margin-top: -1em;
+    margin-bottom: 2em;
     font-size: 3em;
 }
 
