--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ h3{
     font-size: 1em;
 }
 h4{
+    font-size: 1.5em;
     padding-top: 2.2em;
     padding-left: 6em;
     padding-right: 6em;
@@ -75,6 +76,7 @@ a:link{
 a:visited{
     text-decoration: currentColor;
 }
+
 
 @media (min-width: 600px){
 
