--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ footer{
 }
 
 /* Download Button*/
-
 button{
     background-color:rgb(240, 187, 234);
     color: black;
@@ -72,9 +71,7 @@ button{
     margin-left: 35%;
     margin-right: 35%;
     font-size: 1.5em;
-
 }
-
 
 .row{
     display: flex;
@@ -115,6 +112,7 @@ button{
     background-image: repeat;
     width: 100%;
     height: 100%;
+    margin-bottom: 3em;
 }
 
 /* Resume Styles*/
@@ -124,6 +122,40 @@ button{
     margin: 1%;
 }
 
+/* Form Styles*/
+input[type=text], input[type=email], input[type=tel], textarea{
+    color: black;
+    font-family:Verdana, sans-serif;
+    font-size: 1em;
+    margin-bottom: 1em;
+    margin-left: 15%;
+    margin-right: 15%;
+    width: 70%;
+}
+input[type=submit], input[type=reset]{
+    color: black;
+    font-family:Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 1.25em;
+}
+input[type=submit]{
+    margin-left: 15%;
+    width: 35%;
+}
+input[type=reset]{
+    width: 35%;
+}
+label{
+    font-family:Verdana, sans-serif;
+    font-size: 1.25em;
+    font-weight: bold;
+    margin-left: 15%;
+    
+}
+form{
+    padding-bottom: 2em;
+    padding-top: 2em;
+}
 /* Link Colors*/
 a:link{
     text-decoration: none;
@@ -173,7 +205,8 @@ a:visited{
         font-size: 1.1em;
     }
     .back{
-        margin: 1%;
+        margin-left: 1%;
+        margin-right: 1%;
         width: 99%;
     }
     .resume{
@@ -199,7 +232,8 @@ a:visited{
 @media (min-width: 1025px){
         /* Resume & Contact Form*/
         .back{
-            margin: 7.5%;
+            margin-left: 7.5%;
+            margin-right: 7.5;
             width: 85%;
             height: 100%;
 
